objects/Quota_Attainment__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quota_Attainments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GU_Quota_Attainment_Percent__c</fullName>
        <label>GU Quota Attainment Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GU_Quota_Attainment__c</fullName>
        <label>GU Quota Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GU_Quota__c</fullName>
        <label>GU_Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Maint_ACV_Quota_Attain_Percent__c</fullName>
        <label>License Maint ACV Quota Attain Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>License_Maint_ACV_Quota_Attainment__c</fullName>
        <label>License Maint ACV Quota Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Maint_ACV_Quota__c</fullName>
        <label>License Maint ACV Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_Flag__c</fullName>
        <formula>Employee__r.Manager_Flag__c</formula>
        <label>Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Quota_Attainment_Percent__c</fullName>
        <label>PS Quota Attainment Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PS_Quota_Attainment__c</fullName>
        <label>PS_Quota_Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Quota__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PS_Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Target__c</fullName>
        <label>Personal Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Quota_Attainment_Percent__c</fullName>
        <label>Total Annual Quota Attainment Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Quota_Attainment__c</fullName>
        <label>Total Annual Quota Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Quota__c</fullName>
        <label>Total Annual Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Quota_Attainment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee_ID__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Level__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>License_Maint_ACV_Quota__c</columns>
        <columns>License_Maint_ACV_Quota_Attainment__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Year__c</columns>
        <columns>Title__c</columns>
        <columns>Employee_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>My View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quota_Attainment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quota_Attainments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>